<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/backgroundApp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/orange"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/NewTarget"
            android:textColor="#fff"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_close" />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="?attr/invertColor">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/icon_edit"
            android:drawablePadding="5dp"
            android:hint="@string/ForWhat"
            android:textColor="?attr/mediumColor"
            android:textColorHint="?attr/softColor"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="13sp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="?attr/invertColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="12dp"
                android:background="@android:color/transparent"
                android:text="Rp"
                android:textStyle="bold"
                android:textColor="?attr/mediumColor"
                android:textSize="13sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/HowMany"
                android:textColor="?attr/mediumColor"
                android:textColorHint="?attr/softColor"
                android:inputType="number"
                android:textSize="13sp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="?attr/invertColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/YourNote"
                android:textColor="?attr/mediumColor" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:gravity="top|left"
                android:hint="@string/Example"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:textColor="?attr/mediumColor"
                android:textColorHint="?attr/softColor"
                android:textSize="13sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="?attr/orange">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:text="@string/SaveTarget"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

</LinearLayout>